--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "scss": "^0.2.4"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
@@ -29,7 +29,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
-    "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1",
