--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.55.0"
