--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tsparticles": "1.43.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
