--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "password-generator",
-  "private": true,
-  "homepage": "https://elvas.me",
+  "private": false,
+  "homepage": "https://sdrrv.github.io/",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
